# cmake_practice

./: .gitignore
t2/: CMakeLists.txt
t2/doc/: CMakeLists.txt  hello.txt
t3/lib/: CMakeLists.txt  hello.cpp  hello.h  libhello.dylib
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt  main.cpp
